...

      {/* 管理Tab */}
      <Tab.Screen
        name="FAManagementTab"
        component={FAManagementStackNavigator}
        options={{
          title: "管理",
          tabBarIcon: ({ color, size }) => (
            <Icon source="cog" size={size} color={color} />
          ),
        }}
      />

      {/* 我的Tab */}
      <Tab.Screen
        name="FAProfileTab"
        component={FAProfileStackNavigator}
        options={{
          title: "我的",
          tabBarIcon: ({ color, size }) => (
            <Icon source="account" size={size} color={color} />
          ),
        }}
      />
    </Tab.Navigator>
...
